@@ -29,14 +29,19 @@
 
     <modules>
         <module>jvm-channel</module>
+        <module>persist-dsl</module>
+        <module>persist</module>
+        <module>jvm-interop</module>
+        <module>jvm-insight</module>
         <module>examples/jvmlauncher</module>
         <module>examples/jvmchannel</module>
-        <module>jvm-insight</module>
+        <module>examples/jvminterop</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <repoDir>${basedir}</repoDir>
         <moduleName>${project.name}</moduleName>
+        <graalvm.version>25.0.3</graalvm.version>
     </properties>
     <licenses>
         <license>
@@ -72,7 +77,7 @@
             <dependency>
                 <groupId>org.graalvm.sdk</groupId>
                 <artifactId>nativeimage</artifactId>
-                <version>25.0.3</version>
+                <version>${graalvm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -108,6 +113,7 @@
                         <target>25</target>
                         <compilerArgs>
                             <arg>-Xlint:deprecation</arg>
+                            <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -129,6 +135,11 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.11.2</version>
                     <configuration>
+                        <additionalOptions>
+                            <additionalOption>
+                                --snippet-path=${basedir}/src/test/java
+                            </additionalOption>
+                        </additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -178,6 +189,7 @@
                         <metadataRepository>
                             <enabled>false</enabled>
                         </metadataRepository>
+                        <skipBaseSBOM>true</skipBaseSBOM>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -202,6 +214,18 @@
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>3.5.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.5</version>
+                    <configuration>
+                        <argLine>
+                            -XX:+HeapDumpOnOutOfMemoryError
+                            -XX:HeapDumpPath=${project.build.directory}
+                            -Xmx64M
+                        </argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
